# CMPE275-Ingestion-Client

./: CMakeLists.txt  CSVProcessor.cpp  CSVProcessor.h  DataStreamer.cpp  DataStreamer.h  FolderDataHandler.cpp  FolderDataHandler.h  NodeRegistration.cpp  NodeRegistration.h  QueryModule.cpp  QueryModule.h  main.cpp  main_test.cpp
